# grafica-practica2

./: CMakeLists.txt
include/: buffer.h  drawable.h  geometry.h  gizmo.h  mvp_program.h  mvp_simple_color_program.h  program.h  regular_polygon.h  scene.h  uniform_color.h
src/: CMakeLists.txt  buffer.cpp  drawable.cpp  geometry.cpp  gizmo.cpp  main.cpp  mvp_program.cpp  mvp_simple_color_program.cpp  program.cpp  regular_polygon.cpp  scene.cpp  uniform_color.cpp
src/shaders/: CMakeLists.txt  color_fragment.glsl  mvp_vertex.glsl
